Sat Aug 13 18:51:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_block_pass): distinguish current block from others.
	  fixed: [ruby-dev:26274]

	* ext/stringio/stringio.c (strio_set_string): disallow nil.
	  http://www.rubyist.net/~nobu/t/20050811.html#c05

Thu Aug 11 23:29:03 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c: keep holding string after closed.

Thu Aug 11 13:01:48 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss: fixed sort bug. [ruby-list:41018]

	* lib/rss/1.0.rb (RSS::RDF::Channel#setup_maker_attributes):
	  removed self.

	* lib/rss/maker/base.rb (RSS::Maker::ItemsBase#<=>): use #date
	  instead of @date.
	  (RSS::Maker::Base::self.def_array_element): added #size.

	* lib/rss/maker/1.0.rb
	  (RSS::Maker::RSS10::Channel#to_rss,
	   RSS::Maker::RSS10::Items::Item#to_rss): cleared dc_dates set
	  upped by using #date.

	* lib/rss/maker/dublincore.rb
	  (RSS::Maker::ChannelBase, RSS::Maker::ItemsBase::ItemBase):
	  fixed opposite alias.

	* test/rss/test_setup_maker_1.0.rb
	  (RSS::TestSetupMaker10::test_setup_maker_items_sort): added some
	  tests for RSS::Maker::ItemsBase#do_sort.

Wed Aug 10 10:29:40 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix bug on handling __ruby2val_optkeys().

	* ext/tk/lib/tk/itemconfig.rb: fix bug on handling
	  __item_ruby2val_optkeys().

	* ext/tk/lib/tk/canvas.rb: didn't check __item_ruby2val_optkeys().

	* ext/tk/lib/tkextlib/blt/component.rb: ditto.

Tue Aug  9 15:12:04 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: remove dangerous 'rb_jump_tag's.

	* ext/tk/lib/tk.rb: add __val2ruby_optkeys and __ruby2val_optkeys to
	  help to convert option values between ruby and tcl.

	* ext/tk/lib/tk/itemconfig.rb: add __item_val2ruby_optkeys and
	  __item_ruby2val_optkeys to help to convert option values between
	    ruby and tcl.

	* ext/tk/lib/tk/radiobutton.rb: use __ruby2val_optkeys for 'variable'